--- a/summaryView/index.html
+++ b/summaryView/index.html
@@ -1,15 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
-    <link rel="stylesheet" href="styles/standart.css" />
-    <script src="scripts/script.js"></script>
 
-    <title>Document</title>
-  </head>
-  <body>
- 
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="styles/standart.css" />
+  <script src="scripts/script.js"></script>
+  <title>summaryView</title>
+
+</head>
+
+<body>
+  <div class="container">
+    <div class="content">
+      <div class="title-container">
+        <h1 class="title">Join 360</h1>
+        <div class="divider"></div>
+        <p class="subtitle">Key Metrics at a Glance</p>
+      </div>
+
+      <div class="cardContainer">
+        <div class="upperContainer">
+          <div class="card">
+            <p class="number">1</p>
+            <p class="label">To-do</p>
+          </div>
+          <div class="card">
+            <p class="number">1</p>
+            <p class="label">Done</p>
+          </div>
+        </div>
+
+        <div class="middleContainer">
+          <div class="urgent-section">
+            <p class="number">1</p>
+            <p class="label">Urgent</p>
+          </div>
+          <div class="middleDivider"></div>
+          <div class="dateSection">
+            <p class="date">October 16, 2022</p>
+            <p class="label">Upcoming Deadline</p>
+          </div>
+        </div>
+
+        <div class="bottomContainer">
+          <div class="card">
+            <p class="number">5</p>
+            <p class="label">Tasks in Board</p>
+          </div>
+          <div class="card">
+            <p class="number">2</p>
+            <p class="label">Tasks In Progress</p>
+          </div>
+          <div class="card">
+            <p class="number">2</p>
+            <p class="label">Awaiting Feedback</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="greeting-container">
+      <span class="greeting">Good morning,</span>
+      <span class="name">Sofia Müller</span>
+    </div>
+  </div>
+</body>
+
 </html>
