--- a/legalNotice/index.html
+++ b/legalNotice/index.html
@@ -21,37 +21,26 @@
 
       <div class="menu">
         <div class="menu-buttons">
-          <div class="summery-button">
-            <img
-              class="nav-icon"
-              src="../assets/icon/summary-icon.svg"
-              alt=""
-            />
+          <div class="summery-button" onclick="navigateToNavHeader('../summaryView/index.html')">
+            <img class="nav-icon" src="../assets/icon/summary-icon.svg" alt="" />
             <p>Summary</p>
           </div>
 
-          <div class="add-tast-button">
-            <img
-              class="nav-icon"
-              src="../assets/icon/add-task-icon.svg"
-              alt=""
-            />
+          <div class="add-tast-button" onclick="navigateToNavHeader('../addTask/index.html')">
+            <img class="nav-icon" src="../assets/icon/add-task-icon.svg" alt="" />
             <p>Add task</p>
           </div>
 
-          <div class="board-button" onclick="loadBoardView()">
+          <div class="board-button" onclick="navigateToNavHeader('../boardView/index.html')">
             <img class="nav-icon" src="../assets/icon/board-icon.svg" alt="" />
             <p>Board</p>
           </div>
 
-          <div class="contacts-button" onclick="loadContactsView()">
-            <img
-              class="nav-icon"
-              src="../assets/icon/contacts-icon.svg"
-              alt=""
-            />
+          <div class="contacts-button" onclick="navigateToNavHeader('../contactsView/index.html')">
+            <img class="nav-icon" src="../assets/icon/contacts-icon.svg" alt="" />
             <p>Contacts</p>
           </div>
+        </div>
         </div>
 
         <div class="nav-links">
