--- a/contactsView/index.html
+++ b/contactsView/index.html
@@ -26,7 +26,7 @@
       </button>
       <div id="contactsContent"></div>
     </div>
-    <div class="contactsInfo">
+    <div class="contactsInfo" id="contactsInfo">
       <div class="contactsHeader">
         <h1 class="contactsHeaderText">Contacts</h1>
         <div class="blueLine"></div>
