--- a/boardView/index.html
+++ b/boardView/index.html
@@ -55,7 +55,7 @@
           </svg>
         </div>
         <div class="lower-column">
-          <div ondrop="drop(event)" ondragover="allowDrop(event)" class="content" id="contentTodo"></div>
+          <div ondrop="moveTo('contentTodo')" ondragleave="removeHighlight('contentTodo')" ondragover="allowDrop(event); dragAndDropHighlight('contentTodo')" class="content" id="contentTodo"></div>
         </div>
       </div>
 
@@ -65,7 +65,7 @@
           <img onclick="toggleAddTaskOverlay()" class="column-add-button" src="/assets/icon/add-button.svg" alt="" />
         </div>
         <div class="lower-column">
-          <div ondrop="drop(event)" ondragover="allowDrop(event)" class="content" id="contentProgress"></div>
+          <div ondrop="moveTo('contentProgress')" ondragleave="removeHighlight('contentProgress')" ondragover="allowDrop(event); dragAndDropHighlight('contentProgress')" class="content" id="contentProgress"></div>
         </div>
       </div>
 
@@ -75,7 +75,7 @@
           <img onclick="toggleAddTaskOverlay()" class="column-add-button" src="/assets/icon/add-button.svg" alt="" />
         </div>
         <div class="lower-column">
-          <div ondrop="drop(event)" ondragover="allowDrop(event)" class="content" id="contentFeedback"></div>
+          <div ondrop="moveTo('contentFeedback')" ondragleave="removeHighlight('contentFeedback')" ondragover="allowDrop(event); dragAndDropHighlight('contentFeedback')" class="content" id="contentFeedback"></div>
         </div>
       </div>
 
@@ -85,7 +85,7 @@
           <img onclick="toggleAddTaskOverlay()" class="column-add-button" src="/assets/icon/add-button.svg" alt="" />
         </div>
         <div class="lower-column">
-          <div ondrop="drop(event)" ondragover="allowDrop(event)" class="content" id="contentDone">
+          <div ondrop="moveTo('contentDone')" ondragleave="removeHighlight('contentDone')" ondragover="allowDrop(event); dragAndDropHighlight('contentDone')" class="content" id="contentDone">
             
             
           </div>
