--- a/boardView/index.html
+++ b/boardView/index.html
@@ -54,7 +54,7 @@
           </svg>
         </div>
         <div class="lower-column">
-          <div ondrop="drop(event)" ondragover="allowDrop(event)" class="content" id="contentTodo"></div>
+          <div ondrop="moveTo('contentTodo')" ondragleave="removeHighlight('contentTodo')" ondragover="allowDrop(event); dragAndDropHighlight('contentTodo')" class="content" id="contentTodo"></div>
         </div>
       </div>
 
@@ -64,7 +64,7 @@
           <img class="column-add-button" src="/assets/icon/add-button.svg" alt="" />
         </div>
         <div class="lower-column">
-          <div ondrop="drop(event)" ondragover="allowDrop(event)" class="content" id="contentProgress"></div>
+          <div ondrop="moveTo('contentProgress')" ondragleave="removeHighlight('contentProgress')" ondragover="allowDrop(event); dragAndDropHighlight('contentProgress')" class="content" id="contentProgress"></div>
         </div>
       </div>
 
@@ -74,7 +74,7 @@
           <img class="column-add-button" src="/assets/icon/add-button.svg" alt="" />
         </div>
         <div class="lower-column">
-          <div ondrop="drop(event)" ondragover="allowDrop(event)" class="content" id="contentFeedback"></div>
+          <div ondrop="moveTo('contentFeedback')" ondragleave="removeHighlight('contentFeedback')" ondragover="allowDrop(event); dragAndDropHighlight('contentFeedback')" class="content" id="contentFeedback"></div>
         </div>
       </div>
 
@@ -84,7 +84,7 @@
           <img class="column-add-button" src="/assets/icon/add-button.svg" alt="" />
         </div>
         <div class="lower-column">
-          <div ondrop="drop(event)" ondragover="allowDrop(event)" class="content" id="contentDone">
+          <div ondrop="moveTo('contentDone')" ondragleave="removeHighlight('contentDone')" ondragover="allowDrop(event); dragAndDropHighlight('contentDone')" class="content" id="contentDone">
             
             
           </div>
