--- a/contactsView/index.html
+++ b/contactsView/index.html
@@ -32,7 +32,7 @@
         <div class="blueLine"></div>
         <span class="contactsSideText">Better with a team</span>
       </div>
-      <div id="contactInfoExtendet" class="d_none"></div>
+      <div id="contactInfoExtendet" class="d_none slide-out"></div>
     </div>
 
     <div class="contactsInfoMobile">
