--- a/header-navbar/index.html
+++ b/header-navbar/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="styles/resopnsive-header.css" />
   <link rel="stylesheet" href="styles/responsive-navbar.css" />
   <link rel="stylesheet" href="../contactsView/style/overlay.css" />
+  <link rel="stylesheet" href="../summaryView/styles/standart.css" />
   <script src="../contactsView/script/script.js"></script>
   <script src="./script/script.js" defer></script>
   <script src="./script/addTaskScript.js" defer></script>
@@ -25,7 +26,7 @@
 
       <div class="menu">
         <div class="menu-buttons">
-          <div class="summery-button">
+          <div class="summery-button" onclick="loadSummaryView()">
             <img class="nav-icon" src="../assets/icon/summary-icon.svg" alt="" />
             <p onclick="activateOverlay()">Summary</p>
           </div>
