push contact extendet & search function

--- a/boardView/index.html
+++ b/boardView/index.html
@@ -29,7 +29,7 @@
 
       <div class="upper-sec-right">
         <div class="search-div">
-          <input id="input" type="text" placeholder="Find task" />
+          <input oninput="searchTaskNotes()" id="input" type="text" placeholder="Find task" />
           <button type="submit">
             <img src="/assets/icon/search-icon.svg" alt="">
           </button>
