SummaryView Fertig auser namen rendern

--- a/loginView/index.html
+++ b/loginView/index.html
@@ -59,7 +59,7 @@
             </div>
             <label>
                 <input class="checkboxText" type="checkbox" name="myCheckbox" value="rememberMe"><span>I accept the
-                </span><a class="linkPrivacyPolicy" href="#">Privacy policy</a>
+                </span><a class="linkPrivacyPolicy" href="../privacyPolicy/index.html">Privacy policy</a>
             </label>
             <div class="loginButtons">
                 <p onclick="signUpNewUser()" class="blueBtn" id="createUserBtn">Sign up</p>
@@ -68,8 +68,8 @@
     </main>
 
     <footer>
-        <p>Privacy Policy</p>
-        <p>Legal Notice</p>
+        <p href="../privacyPolicy/index.html">Privacy Policy</p>
+        <p href="../legalNotice/index.html">Legal Notice</p>
     </footer>
     <script type="module" src="scripts/firebase.js"></script>
     <script type="module" src="./scripts/firebase-firestore.js"></script>
