Board fehlen nur kleinigkeiten ddropdown fehlt mit logout und kleine design sachen

--- a/addTask/index.html
+++ b/addTask/index.html
@@ -33,7 +33,7 @@
           placeholder="Select contacts to assign">
         <img onclick="toggleContactSelection(); toggleDropdown()" class="dropDownArrow" src="../assets/icon/arrow_drop_down.svg"
           alt="arrowDown">
-        <div class="container d_none" id="contactRender"></div>
+        <div class="containerContacts d_none" id="contactRender"></div>
       </div>
 
       <div class="theLine"></div>
