--- a/boardView/index.html
+++ b/boardView/index.html
@@ -31,8 +31,8 @@
       <div class="upper-sec-right">
         <div class="search-div">
           <input id="inputSearchBar" type="text" placeholder="Find task">
-          <button type="submit" onclick="searchTask()">
-            <img src="/assets/icon/search-icon.svg" alt="">
+          <button type="submit">
+            <img class="pointer" onclick="searchTask()" src="/assets/icon/search-icon.svg" alt="">
           </button>
         </div>
 
