--- a/addTask/index.html
+++ b/addTask/index.html
@@ -127,7 +127,7 @@
             Clear<img src="/assets/icon/Close.svg" alt="cancelIcon" />
           </p>
           <button class="createBtn" onclick="addTaskToFirebase()">
-            Create Task<img src="/assets/icon/check.svg" alt="" />
+            Create Task<img class="addTaskCheckIcon" src="/assets/icon/check.svg" alt="" />
           </button>
         </div>
       </div>
