--- a/summaryView/index.html
+++ b/summaryView/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="styles/standart.css" />
+  <link rel="stylesheet" href="styles/sumarryResponsive.css"/>
   <script src="../loginView/scripts/firebase-realtime.js" defer></script>
   <title>summaryView</title>
 
@@ -17,6 +18,8 @@
         <h1 class="title">Join 360</h1>
         <div class="divider"></div>
         <p class="subtitle">Key Metrics at a Glance</p>
+        <div class="dividerResponsive"></div>
+
       </div>
 
       <div class="cardContainer">
