--- a/contactsView/index.html
+++ b/contactsView/index.html
@@ -24,6 +24,13 @@
       </button>
       <img src="/assets/icon/person_add.svg" alt="add_person_icon" />
       </button>
+
+      <button class="addContactBtnMobile" onclick="toggleOverlay()">
+     <img src="/assets/icon/person_add.svg" alt="add_person_icon" />
+      </button>
+
+      
+
       <div id="contactsContent"></div>
     </div>
     <div class="contactsInfo" id="contactsInfo">
