--- a/boardView/index.html
+++ b/boardView/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="/boardView/styles/noteOverlay.css" />
   <link rel="stylesheet" href="/boardView/styles/boardNote.css" />
   <link rel="stylesheet" href="/boardView/styles/boardResponsive.css" />
+  <link rel="stylesheet" href="/boardView/styles/boardNoteResponsive.css" />
   <script src="../loginView/scripts/firebase-realtime.js"></script>
   <script src="script/script.js" defer></script>
   <script src="script/template.js" defer></script>
@@ -30,16 +31,20 @@
 
       <div class="upper-sec-right">
         <div class="search-div">
-          <input oninput="searchTaskNotes()" id="input" type="text" placeholder="Find task" />
-          <button type="submit">
-            <img class="pointer" onclick="searchTask()" src="/assets/icon/search-icon.svg" alt="">
-          </button>
-        </div>
+          <div class="input-div">
+            <input oninput="searchTaskNotes()" id="input" type="text" placeholder="Find task" />
+            <div id="tooltip" class="tooltip d_none">No Results</div>
+            </div>
+  
+            <button type="submit">
+              <img src="/assets/icon/search-icon.svg" alt="">
+            </button>
+          </div>
 
-        <button id="add-task" class="add-task" onclick="toggleAddTaskOverlay()">
-          <p>Add task</p>
-          <img class="add-task-cross-icon" src="/assets/icon/cross.svg" alt="">
-        </button>
+          <button id="add-task" class="add-task" onclick="toggleAddTaskOverlay()">
+            <p>Add task</p>
+            <img class="add-task-cross-icon" src="/assets/icon/cross.svg" alt="">
+          </button>
       </div>
     </section>
 
