--- a/privacyPolicy/index.html
+++ b/privacyPolicy/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="styles/standart.css" />
   <link rel="stylesheet" href="styles/resopnsive-header.css" />
   <link rel="stylesheet" href="styles/privacy-policy.css" />
+  <link rel="stylesheet" href="styles/responsive-navbar.css" />
   <script src="../header-navbar/script/script.js"></script>
 
   <title>Join - Privacy Policy</title>
