--- a/boardView/index.html
+++ b/boardView/index.html
@@ -31,20 +31,16 @@
 
       <div class="upper-sec-right">
         <div class="search-div">
-          <div class="input-div">
-            <input id="inputSearchBar" oninput="searchTaskNotes()" id="input" type="text" placeholder="Find task" />
-            <div id="tooltip" class="tooltip d_none">No Results</div>
-            </div>
-  
-          
-            <button  id="add-task" class="add-task" onclick="toggleAddTaskOverlay()">
-              <p>Add task</p>
-              <img class="add-task-cross-icon" src="/assets/icon/cross.svg" alt="">
-            </button>
-          </div>
+          <input id="inputSearchBar" type="text" placeholder="Find task">
+          <button type="submit">
             <img class="pointer" onclick="searchTask()" src="/assets/icon/search-icon.svg" alt="">
+          </button>
         </div>
 
+        <button id="add-task" class="add-task" onclick="toggleAddTaskOverlay()">
+          <p>Add task</p>
+          <img class="add-task-cross-icon" src="/assets/icon/cross.svg" alt="">
+        </button>
       </div>
     </section>
 
