--- a/legalNotice/index.html
+++ b/legalNotice/index.html
@@ -16,39 +16,38 @@
   <body>
 
     <section class="leftSide">
-    <nav>
-      <img class="logo" src="../assets/img/logo-white.svg" alt="" />
-
-      <div class="menu">
-        <div class="menu-buttons">
-          <div class="summery-button" onclick="navigateToNavHeader('../summaryView/index.html')">
-            <img class="nav-icon" src="../assets/icon/summary-icon.svg" alt="" />
-            <p>Summary</p>
+      <nav>
+        <img class="join-logo" src="../assets/img/logo-white.svg" alt="" />
+  
+        <div class="menu">
+          <div class="menu-buttons">
+            <div class="summery-button" onclick="loadSummaryView()">
+              <img class="nav-icon" src="../assets/icon/summary-icon.svg" alt="" />
+              <p>Summary</p>
+            </div>
+  
+            <div class="add-tast-button" onclick="loadAddTaskView()">
+              <img class="nav-icon" src="../assets/icon/add-task-icon.svg" alt="" />
+              <p>Add task</p>
+            </div>
+  
+            <div class="board-button" onclick="loadBoardView()">
+              <img class="nav-icon" src="../assets/icon/board-icon.svg" alt="" />
+              <p>Board</p>
+            </div>
+  
+            <div class="contacts-button" onclick="loadContactsView()">
+              <img class="nav-icon" src="../assets/icon/contacts-icon.svg" alt="" />
+              <p>Contacts</p>
+            </div>
           </div>
-
-          <div class="add-tast-button" onclick="navigateToNavHeader('../addTask/index.html')">
-            <img class="nav-icon" src="../assets/icon/add-task-icon.svg" alt="" />
-            <p>Add task</p>
-          </div>
-
-          <div class="board-button" onclick="navigateToNavHeader('../boardView/index.html')">
-            <img class="nav-icon" src="../assets/icon/board-icon.svg" alt="" />
-            <p>Board</p>
-          </div>
-
-          <div class="contacts-button" onclick="navigateToNavHeader('../contactsView/index.html')">
-            <img class="nav-icon" src="../assets/icon/contacts-icon.svg" alt="" />
-            <p>Contacts</p>
+  
+          <div class="nav-links">
+            <a href="../privacyPolicy/index.html" class="privacy-policy">Privacy Policy</a>
+            <a href="../legalNotice/index.html" class="legal-notice">Legal notice</a>
           </div>
         </div>
-        </div>
-
-        <div class="nav-links">
-          <a class="privacy-policy" href="/privacyPolicy/index.html">Privacy Policy</a>
-          <a class="legal-notice" href="/legalNotice/index.html">Legal notice</a>
-        </div>
-      </div>
-    </nav>
+      </nav>
   </section>
   
 
