--- a/header-navbar/index.html
+++ b/header-navbar/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="../summaryView/styles/standart.css" />
   <link rel="stylesheet" href="../summaryView/styles/sumarryResponsive.css"/>
   <link rel="stylesheet" href="../boardView/styles/boardNoteResponsive.css" />
+  <link rel="icon" href="../assets/icon/LogoFavicon.svg"
   <script src="../contactsView/script/script.js"></script>
   <script src="./script/script.js" defer></script>
   <script src="./script/template.js" defer></script>
