--- a/privacyPolicy/index.html
+++ b/privacyPolicy/index.html
@@ -18,55 +18,54 @@
 <body>
   <section class="leftSide">
     <nav>
-      <img class="logo" src="../assets/img/logo-white.svg" alt="" />
+      <img class="join-logo" src="../assets/img/logo-white.svg" alt="" />
 
       <div class="menu">
         <div class="menu-buttons">
-          <div class="summery-button" onclick="navigateToNavHeader('../summaryView/index.html')">
+          <div class="summery-button" onclick="loadSummaryView()">
             <img class="nav-icon" src="../assets/icon/summary-icon.svg" alt="" />
             <p>Summary</p>
           </div>
 
-          <div class="add-tast-button" onclick="navigateToNavHeader('../addTask/index.html')">
+          <div class="add-tast-button" onclick="loadAddTaskView()">
             <img class="nav-icon" src="../assets/icon/add-task-icon.svg" alt="" />
             <p>Add task</p>
           </div>
 
-          <div class="board-button" onclick="navigateToNavHeader('../boardView/index.html')">
+          <div class="board-button" onclick="loadBoardView()">
             <img class="nav-icon" src="../assets/icon/board-icon.svg" alt="" />
             <p>Board</p>
           </div>
 
-          <div class="contacts-button" onclick="navigateToNavHeader('../contactsView/index.html')">
+          <div class="contacts-button" onclick="loadContactsView()">
             <img class="nav-icon" src="../assets/icon/contacts-icon.svg" alt="" />
             <p>Contacts</p>
           </div>
         </div>
 
         <div class="nav-links">
-          <a class="privacy-policy" href="/privacyPolicy/index.html">Privacy Policy</a>
-          <a class="legal-notice" href="/legalNotice/index.html">Legal notice</a>
+          <a href="../privacyPolicy/index.html" class="privacy-policy">Privacy Policy</a>
+          <a href="../legalNotice/index.html" class="legal-notice">Legal notice</a>
         </div>
       </div>
     </nav>
   </section>
 
   <section class="rightSide">
-    <header>
-      <h3>Kanban Project Management Tool</h3>
+    <header id="headerId">
+      <h4>Kanban Project Management Tool</h4>
       <div class="header-div">
         <!-- <a href="">
-            <img
-              class="question-icon"
-              src="..//assets/icon/default-icon.svg"
-              alt=""
-            />
-          </a> -->
-        <img class="mobile-logo" src="/assets/img/logo-black.svg" alt="" />
+          <img class="question-icon" src="../assets/icon/default-icon.svg" alt="" />
+        </a> -->
+        <img class="mobile-logo" src="../assets/img/logo-black.svg" alt="" />
 
-        <!-- <div class="account" onclick="">
-            <p>SM</p>
-          </div> -->
+        <!-- <div class="account" onclick="userDropDown()">
+          <p>SM</p>
+        </div> -->
+
+    
+        
       </div>
     </header>
 
@@ -83,7 +82,7 @@
         privacy and ensuring that your personal information is handled in a
         safe and responsible way. This Privacy Policy explains how we collect,
         use, and share information when you visit our website,
-        <span class="link">LINKLINKLINKLINKLINKLINK</span>, or use our
+        <span class="link"></span>, or use our
         services.
       </p>
       <div class="how-to-use-div">
