Kanbanprojekt alle velinkungen neu gesetzt

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         <div class="signUpSuccess signupSuccessAnimationStartpoint">You Signed Up successfully</div>
     </main>
     <footer>
-        <a href="./privacyPolicyExternal.html">Privacy Policy</a>
-        <a href="./legalNoticeExternal.html">Legal notice</a>
+        <a href="./privacy_policy/privacyPolicyExternal.html">Privacy Policy</a>
+        <a href="./legal_notice/legalNoticeExternal.html">Legal notice</a>
     </footer>
 </body>
 </html>
