--- a/legal_notice/legalNotice.html
+++ b/legal_notice/legalNotice.html
@@ -18,26 +18,26 @@
   <section id="sidebar">
     <img class="sidebarLogo" src="./assets/img/Join logo vector.svg" alt="Join Logo" />
     <div id="menu" class="menu">
-      <a id="summary" class="menuButton" href="./summary.html">
+      <a id="summary" class="menuButton" href="../summary_view/summary.html">
         <img class="menuIcon" src="./assets/img/summary_icon.svg" alt="summary icon" />
         <span>Summary</span>
       </a>
-      <a id="addTask" class="menuButton" href="./addTasks.html">
+      <a id="addTask" class="menuButton" href="../add_task_view/addTasks.html">
         <img class="menuIcon" src="./assets/img/add_task_icon.svg" alt="add_task_icon" />
         <span>Add Task</span>
       </a>
-      <a id="board" class="menuButton" href="./board.html">
-        <img class="menuIcon" src="./assets/img/board_icon.svg" alt="board_icon" />
+      <a id="board" class="active" href="../board_view/board.html">
+        <img class="menuIcon" src="./assets/img/board_active.svg" alt="board_icon" />
         <span>Board</span>
       </a>
-      <a id="contacts" class="menuButton" href="./contacts.html">
+      <a id="contacts" class="menuButton" href="../contact_view/contacts.html">
         <img class="menuIcon" src="./assets/img/contacts_icon.svg" alt="contacts_icon" />
         <span>Contacts</span>
       </a>
     </div>
     <div class="links">
-      <a class="linkButton" href="./privacyPolicy.html">Privacy Policy</a>
-      <a class="linkButton activeLink" href="./legalNotice.html">Legal notice</a>
+      <a class="linkButton" href="../privacy_policy/privacyPolicy.html">Privacy Policy</a>
+      <a class="linkButton" href="../legal_notice/legalNotice.html">Legal notice</a>
     </div>
   </section>
 
@@ -146,21 +146,19 @@
     </main>
     <footer>
       <section class="footerMenu">
-        <a id="respSummary" class="respMenuButton"
-          href="https://join-0724-aw-2.developerakademie.net/Join/summary.html">
+        <a id="respSummary" class="respMenuButton" href="../summary_view/summary.html">
           <img class="menuIcon" src="./assets/img/summary_icon.svg" alt="summary icon" />
           <span>Summary</span>
         </a>
-        <a id="addTask" class="respMenuButton respActive"
-          href="https://join-0724-aw-2.developerakademie.net/Join/addTasks.html">
-          <img class="menuIcon" src="./assets/img/add_task_icon.svg" alt="add_task_icon" />
+        <a id="addTask" class="respMenuButton respActive" href="../add_task_view/addTasks.html">
+          <img class="menuIcon" src="./assets/img/add_task_active.svg" alt="add_task_icon" />
           <span>Add Task</span>
         </a>
-        <a id="board" class="respMenuButton" href="https://join-0724-aw-2.developerakademie.net/Join/board.html">
+        <a id="board" class="respMenuButton" href="../board_view/board.html">
           <img class="menuIcon" src="./assets/img/board_icon.svg" alt="board_icon" />
           <span>Board</span>
         </a>
-        <a id="contacts" class="respMenuButton" href="https://join-0724-aw-2.developerakademie.net/Join/contacts.html">
+        <a id="contacts" class="respMenuButton" href="../contact_view/contacts.html">
           <img class="menuIcon" src="./assets/img/contacts_icon.svg" alt="contacts_icon" />
           <span>Contacts</span>
         </a>
