--- a/legal_notice/legalNotice.html
+++ b/legal_notice/legalNotice.html
@@ -59,12 +59,12 @@
 
         <h3>Imprint</h3>
         <ul>
-          <li>Sebastian Böhme</li>
-          <li>Flonheimerstraße 2</li>
-          <li>55232 Alzey</li>
+          <li>Siarhei Wehrhahn</li>
+          <li>Loher str. 1</li>
+          <li>58511 Lüdenscheid/li>
         </ul>
         <h3>Exploring the Board</h3>
-        <p>Email: sebastianboehme92@gmail.com</p>
+        <p>Email: kontakt@siarhei-wehrhahn.de</p>
 
         <div>
           <h3>Acceptance of terms</h3>
