--- a/privacy_policy/privacyPolicyExternal.html
+++ b/privacy_policy/privacyPolicyExternal.html
@@ -101,11 +101,11 @@
         <h3>Information on the Responsible Party</h3>
         <p>The responsible party for data processing on this website is:</p>
         <address>
-          Sebastian Böhme<br>
-          Flonheimer Str. 2<br>
-          55232 Alzey<br>
-          Phone: 07124875769<br>
-          Email: sebastianboehme92@gmail.com<br>
+          Siarhei Wehrhahn<br />
+          Loher str. 1<br />
+          558511 Lüdenscheid<br />
+          Phone: 015773656331<br />
+          Email: kontakt@siarhei-wehrhahn.de<br />
         </address>
 
         <p>The responsible party is the natural or legal person who, alone or jointly with others, determines the
