bug fixes Projekt soweit fertig

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Join - Log in</title>
-    <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="./global_styles/style.css">
-    <link rel="stylesheet" href="./assets/fonts/Inter/inter.css">
+    <link rel="stylesheet" href="../assets/fonts/Inter/inter.css">
     <link rel="stylesheet" href="./global_styles/login.css">
     <script src="./global_scripts/loginTemplates.js"></script>
-    <script src="./global_scripts/firebaseAPI.js"></script>
+    <script src="./global_scripts/"></script>
     <script src="./global_scripts/contacts.js"></script>
     <script src="./global_scripts/validation.js"></script>
     <script src="./global_scripts/script.js"></script>
