--- a/legal_notice/legalNotice.html
+++ b/legal_notice/legalNotice.html
@@ -6,32 +6,32 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Legal Notice</title>
   <link rel="stylesheet" href="../global_styles/style.css" />
-  <link rel="stylesheet" href="./assets/fonts/Inter/inter.css" />
+  <link rel="stylesheet" href="../assets/fonts/Inter/inter.css" />
   <link rel="stylesheet" href="../global_styles/mediaquerySidebarAndFooter.css" />
   <link rel="stylesheet" href="./legalNotice.css" />
-  <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon" />
+  <link rel="shortcut icon" href="../assets/favicon.png" type="image/x-icon" />
   <script src="../global_scripts/script.js"></script>
 </head>
 
 <body>
 
   <section id="sidebar">
-    <img class="sidebarLogo" src="./assets/img/Join logo vector.svg" alt="Join Logo" />
+    <img class="sidebarLogo" src="../assets/img/Join logo vector.svg" alt="Join Logo" />
     <div id="menu" class="menu">
       <a id="summary" class="menuButton" href="../summary_view/summary.html">
-        <img class="menuIcon" src="./assets/img/summary_icon.svg" alt="summary icon" />
+        <img class="menuIcon" src="../assets/img/summary_icon.svg" alt="summary icon" />
         <span>Summary</span>
       </a>
       <a id="addTask" class="menuButton" href="../add_task_view/addTasks.html">
-        <img class="menuIcon" src="./assets/img/add_task_icon.svg" alt="add_task_icon" />
+        <img class="menuIcon" src="../assets/img/add_task_icon.svg" alt="add_task_icon" />
         <span>Add Task</span>
       </a>
       <a id="board" class="active" href="../board_view/board.html">
-        <img class="menuIcon" src="./assets/img/board_active.svg" alt="board_icon" />
+        <img class="menuIcon" src="../assets/img/board_active.svg" alt="board_icon" />
         <span>Board</span>
       </a>
       <a id="contacts" class="menuButton" href="../contact_view/contacts.html">
-        <img class="menuIcon" src="./assets/img/contacts_icon.svg" alt="contacts_icon" />
+        <img class="menuIcon" src="../assets/img/contacts_icon.svg" alt="contacts_icon" />
         <span>Contacts</span>
       </a>
     </div>
@@ -45,7 +45,7 @@
     <header>
       <div class="project">
         <p>Kanban Project Managment Tool</p>
-        <img src="./assets/img/resp_header.svg" alt="" />
+        <img src="../assets/img/resp_header.svg" alt="" />
       </div>
     </header>
     <main>
@@ -53,7 +53,7 @@
         <div class="heading">
           <h1>Legal Notice</h1>
           <div onclick="goBack()" class="backButton">
-            <img src="./assets/img/arrow_button_img.svg" alt="" />
+            <img src="../assets/img/arrow_button_img.svg" alt="" />
           </div>
         </div>
 
@@ -147,19 +147,19 @@
     <footer>
       <section class="footerMenu">
         <a id="respSummary" class="respMenuButton" href="../summary_view/summary.html">
-          <img class="menuIcon" src="./assets/img/summary_icon.svg" alt="summary icon" />
+          <img class="menuIcon" src="../assets/img/summary_icon.svg" alt="summary icon" />
           <span>Summary</span>
         </a>
         <a id="addTask" class="respMenuButton respActive" href="../add_task_view/addTasks.html">
-          <img class="menuIcon" src="./assets/img/add_task_active.svg" alt="add_task_icon" />
+          <img class="menuIcon" src="../assets/img/add_task_active.svg" alt="add_task_icon" />
           <span>Add Task</span>
         </a>
         <a id="board" class="respMenuButton" href="../board_view/board.html">
-          <img class="menuIcon" src="./assets/img/board_icon.svg" alt="board_icon" />
+          <img class="menuIcon" src="../assets/img/board_icon.svg" alt="board_icon" />
           <span>Board</span>
         </a>
         <a id="contacts" class="respMenuButton" href="../contact_view/contacts.html">
-          <img class="menuIcon" src="./assets/img/contacts_icon.svg" alt="contacts_icon" />
+          <img class="menuIcon" src="../assets/img/contacts_icon.svg" alt="contacts_icon" />
           <span>Contacts</span>
         </a>
       </section>
