--- a/privacy_policy/privacyPolicyExternal.html
+++ b/privacy_policy/privacyPolicyExternal.html
@@ -6,16 +6,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Pricacy Policy</title>
   <link rel="stylesheet" href="../global_styles/style.css" />
-  <link rel="stylesheet" href="./assets/fonts/Inter/inter.css" />
+  <link rel="stylesheet" href="../assets/fonts/Inter/inter.css" />
   <link rel="stylesheet" href="../global_styles/mediaquerySidebarAndFooter.css" />
   <link rel="stylesheet" href="../global_styles/legalNotice.css" />
-  <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon" />
+  <link rel="shortcut icon" href="../assets/favicon.png" type="image/x-icon" />
   <script src="../global_scripts/script.js"></script>
 </head>
 
 <body>
   <section id="sidebar">
-    <img class="sidebarLogo" src="./assets/img/Join logo vector.svg" alt="Join Logo" />
+    <img class="sidebarLogo" src="../assets/img/Join logo vector.svg" alt="Join Logo" />
     <div id="menu" class="menu">
 
       <div class="links">
@@ -31,7 +31,7 @@
     <header>
       <div class="project">
         <p>Kanban Project Managment Tool</p>
-        <img src="./assets/img/resp_header.svg" alt="" />
+        <img src="../assets/img/resp_header.svg" alt="" />
       </div>
     </header>
     <main>
@@ -39,7 +39,7 @@
         <div class="heading">
           <h1>Privacy Policy</h1>
           <div onclick="goBack()" class="backButton">
-            <img src="./assets/img/arrow_button_img.svg" alt="" />
+            <img src="../assets/img/arrow_button_img.svg" alt="" />
           </div>
         </div>
 
