--- a/board_view/board.html
+++ b/board_view/board.html
@@ -6,14 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Join - Board</title>
   <link rel="stylesheet" href="../global_styles/style.css" />
-  <link rel="stylesheet" href="./assets/fonts/Inter/inter.css" />
+  <link rel="stylesheet" href="../assets/fonts/Inter/inter.css" />
   <link rel="stylesheet" href="../global_styles/mediaquerySidebarAndFooter.css" />
   <link rel="stylesheet" href="./styles/board.css" />
   <link rel="stylesheet" href="./styles/boardOverlay.css">
   <link rel="stylesheet" href="../global_styles/addTaskForm.css">
   <link rel="stylesheet" href="./styles/respBoard.css">
   <link rel="stylesheet" href="../global_styles/addTaskForm.css">
-  <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon" />
+  <link rel="shortcut icon" href="../assets/favicon.png" type="image/x-icon" />
   <script src="../global_scripts/firebaseAPI.js"></script>
   <script src="../global_scripts/tasksTemplates.js"></script>
   <script src="../global_scripts/tasks.js"></script>
@@ -31,12 +31,12 @@
     <header>
       <div class="project">
         <p>Kanban Project Managment Tool</p>
-        <img src="./assets/img/resp_header.svg" alt="" />
+        <img src="../assets/img/resp_header.svg" alt="" />
       </div>
       <div class="picture">
-        <a href="./help.html">
+        <a href="../help-view/help.html">
           <div class="help">
-            <img src="./assets/img/help.png" alt="" />
+            <img src="../assets/img/help.png" alt="" />
           </div>
         </a>
         <div class="userIcon">
@@ -44,7 +44,7 @@
         </div>
       </div>
       <div id="headerDropdown" class="dnone">
-        <a href="./help.html">Help</a>
+        <a href="../help-view/help.html">Help</a>
         <a href="./legalNotice.html">Legal Notice</a>
         <a href="./privacyPolicy.html">Privacy Policy</a>
         <a href="./index.html" onclick="logOut()">Log out</a>
@@ -70,12 +70,12 @@
             <div class="searchButtonArea">
               <div class="searchButtonSpacer"></div>
               <div class="searchButton">
-                <img src="./assets/img/search.svg" alt="" />
+                <img src="../assets/img/search.svg" alt="" />
               </div>
             </div>
           </div>
           <div id="addTaskButton" onclick="openBoardOverlay(); renderOverlayAddTaskCard()">
-            <span>Add Task</span><img src="./assets/img/add.svg" alt="" />
+            <span>Add Task</span><img src="../assets/img/add.svg" alt="" />
           </div>
         </div>
       </section>
@@ -161,22 +161,22 @@
 
     <!-- Sidebar -->
     <section id="sidebar">
-      <img class="sidebarLogo" src="./assets/img/Join logo vector.svg" alt="Join Logo" />
+      <img class="sidebarLogo" src="../assets/img/Join logo vector.svg" alt="Join Logo" />
       <div id="menu" class="menu">
         <a id="summary" class="menuButton" href="../summary_view/summary.html">
-          <img class="menuIcon" src="./assets/img/summary_icon.svg" alt="summary icon" />
+          <img class="menuIcon" src="../assets/img/summary_icon.svg" alt="summary icon" />
           <span>Summary</span>
         </a>
         <a id="addTask" class="menuButton" href="../add_task_view/addTasks.html">
-          <img class="menuIcon" src="./assets/img/add_task_icon.svg" alt="add_task_icon" />
+          <img class="menuIcon" src="../assets/img/add_task_icon.svg" alt="add_task_icon" />
           <span>Add Task</span>
         </a>
         <a id="board" class="active" href="../board_view/board.html">
-          <img class="menuIcon" src="./assets/img/board_active.svg" alt="board_icon" />
+          <img class="menuIcon" src="../assets/img/board_active.svg" alt="board_icon" />
           <span>Board</span>
         </a>
         <a id="contacts" class="menuButton" href="../contact_view/contacts.html">
-          <img class="menuIcon" src="./assets/img/contacts_icon.svg" alt="contacts_icon" />
+          <img class="menuIcon" src="../assets/img/contacts_icon.svg" alt="contacts_icon" />
           <span>Contacts</span>
         </a>
       </div>
@@ -190,19 +190,19 @@
     <footer>
       <section class="footerMenu">
         <a id="respSummary" class="respMenuButton" href="../summary_view/summary.html">
-          <img class="menuIcon" src="./assets/img/summary_icon.svg" alt="summary icon" />
+          <img class="menuIcon" src="../assets/img/summary_icon.svg" alt="summary icon" />
           <span>Summary</span>
         </a>
         <a id="addTask" class="respMenuButton" href="../add_task_view/addTasks.html">
-          <img class="menuIcon" src="./assets/img/add_task_icon.svg" alt="add_task_icon" />
+          <img class="menuIcon" src="../assets/img/add_task_icon.svg" alt="add_task_icon" />
           <span>Add Task</span>
         </a>
         <a id="board" class="respMenuButton respActive" href="../board_view/board.html">
-          <img class="menuIcon" src="./assets/img/board_active.svg" alt="board_icon" />
+          <img class="menuIcon" src="../assets/img/board_active.svg" alt="board_icon" />
           <span>Board</span>
         </a>
         <a id="contacts" class="respMenuButton" href="../contact_view/contacts.html">
-          <img class="menuIcon" src="./assets/img/contacts_icon.svg" alt="contacts_icon" />
+          <img class="menuIcon" src="../assets/img/contacts_icon.svg" alt="contacts_icon" />
           <span>Contacts</span>
         </a>
       </section>
