--- a/contact_view/contacts.html
+++ b/contact_view/contacts.html
@@ -7,10 +7,10 @@
   <title>Join - Contacts</title>
   <link rel="stylesheet" href="../global_styles/style.css">
   <link rel="stylesheet" href="./styles/contacts.css">
-  <link rel="stylesheet" href="./assets/fonts/Inter/inter.css">
+  <link rel="stylesheet" href="../assets/fonts/Inter/inter.css">
   <link rel="stylesheet" href="./styles/contactOverlays.css">
   <link rel="stylesheet" href="../global_styles/mediaquerySidebarAndFooter.css">
-  <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="../assets/favicon.png" type="image/x-icon">
   <link rel="stylesheet" href="./styles/respContacts.css">
   <script src="../global_scripts/firebaseAPI.js"></script>
   <script src="../global_scripts/contacts.js"></script>
@@ -25,12 +25,12 @@
     <header>
       <div class="project">
         <p>Kanban Project Managment Tool</p>
-        <img src="./assets/img/resp_header.svg" alt="" />
+        <img src="../assets/img/resp_header.svg" alt="" />
       </div>
       <div class="picture">
-        <a href="./help.html">
+        <a href="../help-view/help.html">
           <div class="help">
-            <img src="./assets/img/help.png" alt="" />
+            <img src="../assets/img/help.png" alt="" />
           </div>
         </a>
         <div class="userIcon">
@@ -38,7 +38,7 @@
         </div>
       </div>
       <div id="headerDropdown" class="dnone">
-        <a href="./help.html">Help</a>
+        <a href="../help-view/help.html">Help</a>
         <a href="./legalNotice.html">Legal Notice</a>
         <a href="./privacyPolicy.html">Privacy Policy</a>
         <a href="./index.html" onclick="logOut()">Log out</a>
@@ -50,7 +50,7 @@
         <div class="addContactButtonContainer">
           <div onclick="openOverlay('addContactOverlayContainer', 'addContactCardOverlay')" id="addContactButton">
             <b>Add new contact</b>
-            <img src="./assets/img/add_contact_icon.svg" alt="add new contact" />
+            <img src="../assets/img/add_contact_icon.svg" alt="add new contact" />
           </div>
         </div>
         <div id="contactListContent"></div>
@@ -60,28 +60,28 @@
           <h1>Contacts</h1>
           <div class="contactHeadingSpacer"></div>
           <p>Better with a team</p>
-          <img src="./assets/img/pfeil.png" alt="Pfeil Icon" class="arrowIcon" onclick="respContentToggle()">
+          <img src="../assets/img/pfeil.png" alt="Pfeil Icon" class="arrowIcon" onclick="respContentToggle()">
         </div>
         <div id="contactContent"></div>
       </div>
     </main>
     <section id="sidebar">
-      <img class="sidebarLogo" src="./assets/img/Join logo vector.svg" alt="Join Logo" />
+      <img class="sidebarLogo" src="../assets/img/Join logo vector.svg" alt="Join Logo" />
       <div id="menu" class="menu">
         <a id="summary" class="menuButton" href="../summary_view/summary.html">
-          <img class="menuIcon" src="./assets/img/summary_icon.svg" alt="summary icon" />
+          <img class="menuIcon" src="../assets/img/summary_icon.svg" alt="summary icon" />
           <span>Summary</span>
         </a>
         <a id="addTask" class="menuButton" href="../add_task_view/addTasks.html">
-          <img class="menuIcon" src="./assets/img/add_task_icon.svg" alt="add_task_icon" />
+          <img class="menuIcon" src="../assets/img/add_task_icon.svg" alt="add_task_icon" />
           <span>Add Task</span>
         </a>
         <a id="board" class="active" href="../board_view/board.html">
-          <img class="menuIcon" src="./assets/img/board_active.svg" alt="board_icon" />
+          <img class="menuIcon" src="../assets/img/board_active.svg" alt="board_icon" />
           <span>Board</span>
         </a>
         <a id="contacts" class="menuButton" href="../contact_view/contacts.html">
-          <img class="menuIcon" src="./assets/img/contacts_icon.svg" alt="contacts_icon" />
+          <img class="menuIcon" src="../assets/img/contacts_icon.svg" alt="contacts_icon" />
           <span>Contacts</span>
         </a>
       </div>
@@ -100,7 +100,7 @@
               <path d="M6 6L18 18" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
             </svg>
           </div>
-          <img class="backgroundLogo" src="./assets/img/background_logo.svg" alt="" />
+          <img class="backgroundLogo" src="../assets/img/background_logo.svg" alt="" />
           <div class="backgroundText">
             <h2>Add contact</h2>
             <p>Tasks are better with a Team!</p>
@@ -122,21 +122,21 @@
           </div>
           <div class="profileImgAndForm">
             <div class="imgContainer">
-              <img class="defaultProfileImg" src="./assets/img/default_profile_img.svg" alt="">
+              <img class="defaultProfileImg" src="../assets/img/default_profile_img.svg" alt="">
             </div>
             <div class="addContactFormContainer">
               <div class="inputArea">
                 <div class="inputContainer">
                   <input class="inputFields" type="text" name="name" id="addContactInputName" placeholder="Name">
-                  <img src="./assets/img/person.svg" alt="Person Icon">
+                  <img src="../assets/img/person.svg" alt="Person Icon">
                 </div>
                 <div class="inputContainer">
                   <input class="inputFields" type="email" name="email" id="addContactInputEmail" placeholder="Email">
-                  <img src="./assets/img/mail.svg" alt="Mail Icon">
+                  <img src="../assets/img/mail.svg" alt="Mail Icon">
                 </div>
                 <div class="inputContainer">
                   <input class="inputFields" type="number" name="phone" id="addContactInputPhone" placeholder="Phone">
-                  <img src="./assets/img/call.svg" alt="Phone Icon">
+                  <img src="../assets/img/call.svg" alt="Phone Icon">
                 </div>
                 </form>
                 <div class="buttonArea">
@@ -149,7 +149,7 @@
                     </svg>
                   </div>
                   <button class="createContactButton" onclick="addContact()" type="submit" form="addContactForm">Create
-                    contact <img src="./assets/img/check.svg" alt=""></button>
+                    contact <img src="../assets/img/check.svg" alt=""></button>
                 </div>
               </div>
             </div>
@@ -165,7 +165,7 @@
               <path d="M6 6L18 18" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
             </svg>
           </div>
-          <img class="backgroundLogo" src="./assets/img/background_logo.svg" alt="" />
+          <img class="backgroundLogo" src="../assets/img/background_logo.svg" alt="" />
           <div class="backgroundText">
             <h2>Edit contact</h2>
           </div>
@@ -186,20 +186,20 @@
           </div>
           <div class="profileImgAndForm">
             <div class="imgContainer" id="editCardProfileIcon">
-              <img class="defaultProfileImg" src="./assets/img/default_profile_img.svg" alt="">
+              <img class="defaultProfileImg" src="../assets/img/default_profile_img.svg" alt="">
             </div>
             <div class="inputArea">
               <div class="inputContainer">
                 <input class="inputFields" type="text" name="name" id="editContactInputName" placeholder="Name">
-                <img src="./assets/img/person.svg" alt="Person Icon">
+                <img src="../assets/img/person.svg" alt="Person Icon">
               </div>
               <div class="inputContainer">
                 <input class="inputFields" type="text" name="email" id="editContactInputEmail" placeholder="Email">
-                <img src="./assets/img/mail.svg" alt="Mail Icon">
+                <img src="../assets/img/mail.svg" alt="Mail Icon">
               </div>
               <div class="inputContainer">
                 <input class="inputFields" type="number" name="phone" id="editContactInputPhone" placeholder="Phone">
-                <img src="./assets/img/call.svg" alt="Phone Icon">
+                <img src="../assets/img/call.svg" alt="Phone Icon">
               </div>
               <div class="buttonArea">
                 <div class="cancelButton" id="deleteContactOverlayButton" onclick="deleteContact()">Delete
@@ -210,7 +210,7 @@
                   </svg>
                 </div>
                 <button class="createContactButton" id="editContactButton" onclick="editContact()">Save <img
-                    src="./assets/img/check.svg" alt=""></button>
+                    src="../assets/img/check.svg" alt=""></button>
               </div>
             </div>
           </div>
@@ -224,19 +224,19 @@
     <footer>
       <section class="footerMenu">
         <a id="respSummary" class="respMenuButton" href="../summary_view/summary.html">
-          <img class="menuIcon" src="./assets/img/summary_icon.svg" alt="summary icon" />
+          <img class="menuIcon" src="../assets/img/summary_icon.svg" alt="summary icon" />
           <span>Summary</span>
         </a>
         <a id="addTask" class="respMenuButton" href="../add_task_view/addTasks.html">
-          <img class="menuIcon" src="./assets/img/add_task_icon.svg" alt="add_task_icon" />
+          <img class="menuIcon" src="../assets/img/add_task_icon.svg" alt="add_task_icon" />
           <span>Add Task</span>
         </a>
         <a id="board" class="respMenuButton respActive" href="../board_view/board.html">
-          <img class="menuIcon" src="./assets/img/board_active.svg" alt="board_icon" />
+          <img class="menuIcon" src="../assets/img/board_active.svg" alt="board_icon" />
           <span>Board</span>
         </a>
         <a id="contacts" class="respMenuButton" href="../contact_view/contacts.html">
-          <img class="menuIcon" src="./assets/img/contacts_icon.svg" alt="contacts_icon" />
+          <img class="menuIcon" src="../assets/img/contacts_icon.svg" alt="contacts_icon" />
           <span>Contacts</span>
         </a>
       </section>
