--- a/legal_notice/legalNoticeExternal.html
+++ b/legal_notice/legalNoticeExternal.html
@@ -6,16 +6,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Legal Notice</title>
   <link rel="stylesheet" href="../global_styles/style.css" />
-  <link rel="stylesheet" href="./assets/fonts/Inter/inter.css" />
+  <link rel="stylesheet" href="../assets/fonts/Inter/inter.css" />
   <link rel="stylesheet" href="../global_styles/mediaquerySidebarAndFooter.css" />
   <link rel="stylesheet" href="./legalNotice.css" />
-  <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon" />
+  <link rel="shortcut icon" href="../assets/favicon.png" type="image/x-icon" />
   <script src="../global_scripts/script.js"></script>
 </head>
 
 <body>
   <section id="sidebar">
-    <img class="sidebarLogo" src="./assets/img/Join logo vector.svg" alt="Join Logo" />
+    <img class="sidebarLogo" src="../assets/img/Join logo vector.svg" alt="Join Logo" />
     <div class="links">
       <a class="linkButton" href="privacyPolicyExternal.html">Privacy Policy</a>
       <a class="linkButton activeLink" href="legalNoticeExternal.html">Legal notice</a>
@@ -25,7 +25,7 @@
     <header>
       <div class="project">
         <p>Kanban Project Managment Tool</p>
-        <img src="./assets/img/resp_header.svg" alt="" />
+        <img src="../assets/img/resp_header.svg" alt="" />
       </div>
     </header>
 
@@ -34,7 +34,7 @@
         <div class="heading">
           <h1>Legal Notice</h1>
           <div onclick="goBack()" class="backButton">
-            <img src="./assets/img/arrow_button_img.svg" alt="" />
+            <img src="../assets/img/arrow_button_img.svg" alt="" />
           </div>
         </div>
 
