--- a/summary_view/summary.html
+++ b/summary_view/summary.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Join - Summary</title>
-    <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="../global_styles/style.css">
     <link rel="stylesheet" href="./summary.css">
     <link rel="stylesheet" href="../global_styles/mediaquerySidebarAndFooter.css">
-    <link rel="stylesheet" href="./assets/fonts/Inter/inter.css">
+    <link rel="stylesheet" href="../assets/fonts/Inter/inter.css">
     <script src="../global_scripts/script.js"></script>
     <script src="../global_scripts/firebaseAPI.js"></script>
     <script src="../global_scripts/board.js"></script>
@@ -21,12 +21,12 @@
         <header>
             <div class="project">
                 <p>Kanban Project Managment Tool</p>
-                <img src="./assets/img/resp_header.svg" alt="" />
+                <img src="../assets/img/resp_header.svg" alt="" />
             </div>
             <div class="picture">
-              <a href="./help.html">
+              <a href="../help-view/help.html">
                 <div class="help">
-                  <img src="./assets/img/help.png" alt="" />
+                  <img src="../assets/img/help.png" alt="" />
                 </div>
               </a>
                 <div class="userIcon">
@@ -34,10 +34,10 @@
                 </div>
             </div>
             <div id="headerDropdown" class="dnone">
-                <a href="./help.html">Help</a>
-                <a href="./legalNotice.html">Legal Notice</a>
-                <a href="./privacyPolicy.html">Privacy Policy</a>
-                <a href="./index.html" onclick="logOut()">Log out</a>
+                <a href=".../help-view/help.html">Help</a>
+                <a href="../legal_notice/legalNotice.html">Legal Notice</a>
+                <a href="../privacy_policy/privacyPolicy.html">Privacy Policy</a>
+                <a href="../index.html" onclick="logOut()">Log out</a>
             </div>
         </header>
 
@@ -136,22 +136,22 @@
         </main>
 
         <section id="sidebar">
-            <img class="sidebarLogo" src="./assets/img/Join logo vector.svg" alt="Join Logo" />
+            <img class="sidebarLogo" src="../assets/img/Join logo vector.svg" alt="Join Logo" />
             <div id="menu" class="menu">
               <a id="summary" class="menuButton" href="../summary_view/summary.html">
-                <img class="menuIcon" src="./assets/img/summary_icon.svg" alt="summary icon" />
+                <img class="menuIcon" src="../assets/img/summary_icon.svg" alt="summary icon" />
                 <span>Summary</span>
               </a>
               <a id="addTask" class="active" href="../add_task_view/addTasks.html">
-                <img class="menuIcon" src="./assets/img/add_task_active.svg" alt="add_task_icon" />
+                <img class="menuIcon" src="../assets/img/add_task_active.svg" alt="add_task_icon" />
                 <span>Add Task</span>
               </a>
               <a id="board" class="menuButton" href="../board_view/board.html">
-                <img class="menuIcon" src="./assets/img/board_icon.svg" alt="board_icon" />
+                <img class="menuIcon" src="../assets/img/board_icon.svg" alt="board_icon" />
                 <span>Board</span>
               </a>
               <a id="contacts" class="menuButton" href="../contact_view/contacts.html">
-                <img class="menuIcon" src="./assets/img/contacts_icon.svg" alt="contacts_icon" />
+                <img class="menuIcon" src="../assets/img/contacts_icon.svg" alt="contacts_icon" />
                 <span>Contacts</span>
               </a>
             </div>
@@ -164,19 +164,19 @@
           <footer>
             <section class="footerMenu">
               <a id="respSummary" class="respMenuButton" href="../summary_view/summary.html">
-                <img class="menuIcon" src="./assets/img/summary_icon.svg" alt="summary icon" />
+                <img class="menuIcon" src="../assets/img/summary_icon.svg" alt="summary icon" />
                 <span>Summary</span>
               </a>
               <a id="addTask" class="respMenuButton respActive" href="../add_task_view/addTasks.html">
-                <img class="menuIcon" src="./assets/img/add_task_active.svg" alt="add_task_icon" />
+                <img class="menuIcon" src="../assets/img/add_task_active.svg" alt="add_task_icon" />
                 <span>Add Task</span>
               </a>
               <a id="board" class="respMenuButton" href="../board_view/board.html">
-                <img class="menuIcon" src="./assets/img/board_icon.svg" alt="board_icon" />
+                <img class="menuIcon" src="../assets/img/board_icon.svg" alt="board_icon" />
                 <span>Board</span>
               </a>
               <a id="contacts" class="respMenuButton" href="../contact_view/contacts.html">
-                <img class="menuIcon" src="./assets/img/contacts_icon.svg" alt="contacts_icon" />
+                <img class="menuIcon" src="../assets/img/contacts_icon.svg" alt="contacts_icon" />
                 <span>Contacts</span>
               </a>
             </section>
